--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-LOJA DE INSTRUMENTOS MUSICAIS
+<h1><b>LOJA DE INSTRUMENTOS MUSICAIS</b></h1>
+<br>
+<p>Bem-vindo à nossa loja de instrumentos musicais, onde a música ganha vida. Aqui, celebramos a diversidade e a beleza da música por meio de uma ampla seleção de instrumentos de qualidade.</p>
 
-Bem-vindo à nossa loja de instrumentos musicais, onde a música ganha vida. Aqui, celebramos a diversidade e a beleza da música por meio de uma ampla seleção de instrumentos de qualidade.
-
-Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.
+<p>Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.</p> 
