--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Turma C</title>
+    <title>LOJA DE INSTRUMENTOS MUSICAIS</title>
 </head>
 <body>
 <h1><mark><b>LOJA DE INSTRUMENTOS MUSICAIS</b></mark></h1>
@@ -12,3 +12,9 @@
 <p>Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.</p> 
 </body>
 </html>
+
+
+
+
+
+
