--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LOJA DE INSTRUMENTOS MUSICAIS</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
 <h1><mark><b>LOJA DE INSTRUMENTOS MUSICAIS</b></mark></h1>
