--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <p class=" texto2">Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.</p> 
 
-<img src="music.avif">
+<img id="foto"  src="music.avif">
 
 
 </body>
 </html>
+
+
 
 
 
