--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 
 <img id="foto"  src="music.avif">
 
+<o>
+    <li>violões</li>
+    <li>cavaquinhos</li>
+    <li> baterias</li>
+    <li>violinos</li>
+</o>
+
+<ul>
+    <li>violões</li>
+    <li>cavaquinhos</li>
+    <li>baterias</li>
+    <li>violinos</li>
+</ul>
+
 
 </body>
 </html>
