--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>LOJA DE INSTRUMENTOS MUSICAIS</title>
-<link rel="stylesheet" href="style.css">
+  <section>  <title>LOJA DE INSTRUMENTOS MUSICAIS</title>
+<section><link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1 id="titulo"><mark><b>LOJA DE INSTRUMENTOS MUSICAIS</b></mark></h1>
@@ -12,7 +12,7 @@
 
 <p class=" texto2">Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.</p> 
 
-<img id="foto"  src="music.avif">
+<img id="foto"  src="music.avif"> </section>
 
 <ol>
     <li>violões</li>
