--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
 <img id="foto"  src="music.avif"> 
 <section>
-<ol>
+    <ol>
     <li>violões</li>
     <li>cavaquinhos</li>
     <li> baterias</li>
     <li>violinos</li>
 </ol>
+</section>
 
+<section>
 <ul>
     <li>violões</li>
     <li>cavaquinhos</li>
