--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <p class=" texto2">Uma Sinfonia de Possibilidades Seja você um músico experiente ou alguém que está apenas começando sua jornada musical, temos algo para todos. Cada nota é uma história e cada acorde é uma emoção. Explore conosco o mundo dos instrumentos musicais e descubra novas formas de expressar sua criatividade.</p> 
 
-<img id="foto"  src="music.avif"> 
+
+<img width="20%"    height="30"   id="foto"  src="music.avif"> 
+
+
 <h1> <u> 
 <section>
     <ol>
@@ -20,7 +23,6 @@
     <li>cavaquinhos</li>
     <li> baterias</li>
     <li>violinos</li>
-
 </ol>
 </h1></u> 
 </section>
